[package]
name = "rustonis-auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustonis_auth"
path = "src/lib.rs"

[dependencies]
jsonwebtoken = "9"
bcrypt       = "0.15"
axum         = { version = "0.8", default-features = false, features = ["json", "macros"] }
http         = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
