[package]
name = "rustonis-cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustonis_cache"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio      = { version = "1", features = ["full"] }
tokio-test = "0.4"
