[package]
name = "rustonis-http"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustonis_http"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tracing = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
