[package]
name = "rustonis-validator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustonis_validator"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
regex = "1"
rustonis-macros = { path = "../rustonis-macros" }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
