[package]
name = "rustonis-views"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustonis_views"
path = "src/lib.rs"

[dependencies]
axum        = { version = "0.8", default-features = false }
http        = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tera        = "1"
thiserror   = "1"

[dev-dependencies]
serde       = { version = "1", features = ["derive"] }
tokio       = { version = "1", features = ["full"] }
